## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration


pkginclude_DATA = \
    cache.h \
    services.h \
    multiplexes.h \
    dvb.h \
    main.h \
    plugin.h \
    types.h \
    ts.h \
    logging.h \
    list.h \
    commands.h \
    deliverymethod.h \
    sectionprocessor.h \
    pesprocessor.h


EXTRA_DIST = $(pkginclude_DATA)

