## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration


pkginclude_DATA = \
    types.h \
    cache.h \
    objects.h \
    services.h \
    multiplexes.h \
    pids.h \
    dbase.h \
    dvbadapter.h \
    main.h \
    plugin.h \
    ts.h \
    logging.h \
    list.h \
    commands.h \
    deliverymethod.h \
    dispatchers.h\
    dvbtext.h \
    atsctext.h \
    utf8.h \
    messageq.h \
    deferredproc.h \
    events.h


EXTRA_DIST = $(pkginclude_DATA)

