dvbpsidir = $(pkgincludedir)/dvbpsi

dvbpsiatscdir = $(pkgincludedir)/dvbpsi/atsc

dvbpsi_DATA = \
	demux.h \
	descriptor.h \
	datetime.h \
	dr_02.h \
	dr_03.h \
	dr_04.h \
	dr_05.h \
	dr_06.h \
	dr_07.h \
	dr_08.h \
	dr_09.h \
	dr_0a.h \
	dr_0b.h \
	dr_0c.h \
	dr_0d.h \
	dr_0e.h \
	dr_0f.h \
	dr_42.h \
	dr_47.h \
	dr_48.h \
	dr_4d.h \
	dr_4e.h \
	dr_52.h \
	dr_55.h \
	dr_56.h \
	dr_59.h \
	dr_62.h \
	dr_69.h \
	dr_73.h \
	dr_76.h \
	dr_83.h \
	dr.h \
	dvbpsi.h \
	eit.h \
	nit.h \
	pat.h \
	pmt.h \
	psi.h \
	sdt.h \
	tdttot.h \
	cat.h

dvbpsiatsc_DATA =\
	atsc/mgt.h \
	atsc/stt.h \
	atsc/vct.h \
	atsc/eit.h \
	atsc/ett.h

EXTRA_DIST = $(dvbpsi_DATA) $(dvbpsiatsc_DATA)

